Add libraries to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.3
+dataclasses-json==0.6.7
 distro==1.9.0
 frozenlist==1.5.0
 gitdb==4.0.11
@@ -27,14 +30,17 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 langchain==0.3.4
+langchain-community==0.3.3
 langchain-core==0.3.13
 langchain-openai==0.2.3
 langchain-text-splitters==0.3.0
 langsmith==0.1.137
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.23.0
 mdurl==0.1.2
 multidict==6.1.0
+mypy-extensions==1.0.0
 narwhals==1.11.0
 numpy==1.26.4
 openai==1.52.2
@@ -45,11 +51,16 @@ pillow==10.4.0
 propcache==0.2.0
 protobuf==5.28.3
 pyarrow==17.0.0
+pycparser==2.22
 pydantic==2.9.2
+pydantic-settings==2.6.0
 pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
+PyJWT==2.8.0
+PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
@@ -68,8 +79,10 @@ tiktoken==0.8.0
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 watchdog==5.0.3
 yarl==1.16.0
+zhipuai==2.1.5.20230904
